--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <!--
 
-    Copyright (c) 1997, 2018 Oracle and/or its affiliates. All rights reserved.
+    Copyright (c) 1997, 2019 Oracle and/or its affiliates. All rights reserved.
 
     This program and the accompanying materials are made available under the
     terms of the Eclipse Distribution License v. 1.0, which is available at
@@ -25,8 +25,8 @@
     <artifactId>jakarta.xml.bind-api-parent</artifactId>
     <version>2.4.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <name>Java Architecture for XML Binding</name>
-    <description>JAXB (JSR 222) API</description>
+    <name>Jakarta XML Binding</name>
+    <description>Jakarta XML Binding API</description>
     <url>https://github.com/eclipse-ee4j/jaxb-api</url>
 
     <scm>
@@ -59,7 +59,7 @@
 
     <mailingLists>
         <mailingList>
-            <name>Eclipse Project for JAXB mailing list</name>
+            <name>Jakarta XML Binding mailing list</name>
             <post>jaxb-dev@eclipse.org</post>
             <subscribe>https://accounts.eclipse.org/mailing-list/jaxb-dev</subscribe>
             <unsubscribe>https://accounts.eclipse.org/mailing-list/jaxb-dev</unsubscribe>
@@ -68,10 +68,18 @@
     </mailingLists>
 
     <properties>
+        <copyright.exclude>${config.dir}/copyright-exclude</copyright.exclude>
+        <copyright.ignoreyear>false</copyright.ignoreyear>
+        <copyright.scmonly>true</copyright.scmonly>
+        <copyright.templatefile>${config.dir}/edl-copyright.txt</copyright.templatefile>
+        <copyright.update>false</copyright.update>
+        <spotbugs.exclude>${project.basedir}/exclude.xml</spotbugs.exclude>
+        <spotbugs.skip>false</spotbugs.skip>
+        <spotbugs.threshold>Low</spotbugs.threshold>
+        <spotbugs.version>3.1.11</spotbugs.version>
+
         <release.spec.feedback>jaxb-dev@eclipse.org</release.spec.feedback>
         <release.spec.date>Jul 2017</release.spec.date>
-        <findbugs.exclude>${project.basedir}/exclude.xml</findbugs.exclude>
-        <findbugs.threshold>Low</findbugs.threshold>
         <api.package>javax.xml.bind</api.package>
         <extension.name>jakarta.xml.bind</extension.name>
         <spec.version>2.4</spec.version>
@@ -111,7 +119,7 @@
                 <plugin>
                     <groupId>org.glassfish.copyright</groupId>
                     <artifactId>glassfish-copyright-maven-plugin</artifactId>
-                    <version>1.50</version>
+                    <version>2.2</version>
                 </plugin>
                 <plugin>
                     <artifactId>maven-surefire-plugin</artifactId>
@@ -160,17 +168,14 @@
                 <groupId>org.glassfish.copyright</groupId>
                 <artifactId>glassfish-copyright-maven-plugin</artifactId>
                 <configuration>
-                    <templateFile>${config.dir}/edl-copyright.txt</templateFile>
-                    <excludeFile>${config.dir}/copyright-exclude</excludeFile>
-                    <scm>git</scm>
+                    <templateFile>${copyright.templatefile}</templateFile>
+                    <excludeFile>${copyright.exclude}</excludeFile>
                     <!-- skip files not under SCM-->
-                    <scmOnly>true</scmOnly>
-                    <!-- turn off warnings -->
-                    <warn>true</warn>
+                    <scmOnly>${copyright.scmonly}</scmOnly>
                     <!-- for use with repair -->
-                    <update>false</update>
+                    <update>${copyright.update}</update>
                     <!-- check that year is correct -->
-                    <ignoreYear>false</ignoreYear>
+                    <ignoreYear>${copyright.ignoreyear}</ignoreYear>
                 </configuration>
                 <executions>
                     <execution>
@@ -184,24 +189,5 @@
         </plugins>
 
     </build>
-
-   <profiles>
-      <profile>
-            <id>oss-release</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-javadoc-plugin</artifactId>
-                        <configuration>
-                            <additionalJOptions>
-                                <additionalJOption>-Xdoclint:none</additionalJOption>
-                            </additionalJOptions>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
 
 </project>
