--- a/spec/pom.xml
+++ b/spec/pom.xml
@@ -39,15 +39,15 @@
     </properties>
 
     <scm>
-        <connection>scm:git:git://github.com/eclipse-ee4j/jpa-api.git</connection>
-        <developerConnection>scm:git:git@github.com:eclipse-ee4j/jpa-api.git</developerConnection>
-        <url>https://github.com/eclipse-ee4j/jpa-api.git</url>
+        <connection>scm:git:git://github.com/eclipse-ee4j/jaxb-api.git</connection>
+        <developerConnection>scm:git:git@github.com:eclipse-ee4j/jaxb-api.git</developerConnection>
+        <url>https://github.com/eclipse-ee4j/jaxb-api.git</url>
         <tag>HEAD</tag>
     </scm>
 
     <distributionManagement>
         <site>
-            <url>scm:git:git@github.com:eclipse-ee4j/jpa-api.git</url>
+            <url>scm:git:git@github.com:eclipse-ee4j/jaxb-api.git</url>
         </site>
     </distributionManagement>
 
