--- a/jaxb-api/pom.xml
+++ b/jaxb-api/pom.xml
@@ -21,6 +21,7 @@
 
     <artifactId>jakarta.xml.bind-api</artifactId>
     <packaging>jar</packaging>
+    <name>Jakarta XML Binding API</name>
 
     <properties>
         <config.dir>${project.basedir}/../etc/config</config.dir>
@@ -75,7 +76,7 @@
                 <plugin>
                     <groupId>org.apache.felix</groupId>
                     <artifactId>maven-bundle-plugin</artifactId>
-                    <version>3.5.1</version>
+                    <version>4.2.0</version>
                     <configuration>
                         <archive>
                             <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
@@ -135,29 +136,29 @@
                 <plugin>
                     <artifactId>maven-javadoc-plugin</artifactId>
                     <configuration>
-                        <doclint>none</doclint>
                         <nodeprecated>false</nodeprecated>
                         <use>false</use>
                         <author>true</author>
                         <version>true</version>
-                        <doctitle><![CDATA[<br>
-Jakarta XML Binding ${project.version} API Library</h2>
-${project.name} specification, ${release.spec.date}<br>
-Comments to: <i><a href='mailto:${release.spec.feedback}'>${release.spec.feedback}</a></i><br>
-More information at: <i><a target='_top'
-href='https://projects.eclipse.org/projects/ee4j.jaxb'>https://projects.eclipse.org/projects/ee4j.jaxb</a></i><br>
-&nbsp;<br>&nbsp;<br><hr width='65%'><h1>${project.name}</h1><hr width='75%'>
-<br>&nbsp;<br>]]>
-                        </doctitle>
+                        <description>Jakarta XML Binding API documentation</description>
+                        <doctitle>Jakarta XML Binding API documentation</doctitle>
+                        <windowtitle>Jakarta XML Binding API documentation</windowtitle>
                         <header><![CDATA[Jakarta XML Binding<br>v${project.version}]]>
                         </header>
                         <bottom>
                         <![CDATA[
 Comments to : <a href="mailto:${release.spec.feedback}">${release.spec.feedback}</a>.<br>
 Copyright &#169; {inceptionYear}&#x2013;{currentYear} Oracle and/or its affiliates. All rights reserved.<br>
-Use is subject to <a href="{@docRoot}/doc-files/EFSL.html" target="_top">license terms</a>.]]>
+Use is subject to <a href="{@docRoot}/doc-files/speclicense.html" target="_top">license terms</a>.]]>
                         </bottom>
                         <detectJavaApiLink>false</detectJavaApiLink>
+                        <docfilessubdirs>true</docfilessubdirs>
+                        <groups>
+                            <group>
+                                <title>Jakarta XML Binding API Packages</title>
+                                <packages>javax.xml.bind</packages>
+                            </group>
+                        </groups>
                         <tags>
                             <tag>
                                 <name>apiNote</name>
