--- a/jaxb-api-test/pom.xml
+++ b/jaxb-api-test/pom.xml
@@ -23,6 +23,7 @@
     <packaging>jar</packaging>
 
     <properties>
+        <spotbugs.skip>true</spotbugs.skip>
         <config.dir>${project.basedir}/../etc/config</config.dir>
         <legal.doc.source>${project.basedir}/..</legal.doc.source>
     </properties>
