Fixed javadoc configuration.
Signed-off-by: Tomas Kraus <Tomas.Kraus@oracle.com>

--- a/jaxb-api/pom.xml
+++ b/jaxb-api/pom.xml
@@ -154,7 +154,7 @@ Use is subject to <a href="{@docRoot}/doc-files/speclicense.html" target="_top">
                         <groups>
                             <group>
                                 <title>Jakarta XML Binding API Packages</title>
-                                <packages>javax.xml.bind.*</packages>
+                                <packages>javax.xml.bind*</packages>
                             </group>
                         </groups>
                         <tags>
