Updated javadoc and spotbugs configuration.
Signed-off-by: Tomas Kraus <Tomas.Kraus@oracle.com>

--- a/jaxb-api/pom.xml
+++ b/jaxb-api/pom.xml
@@ -84,6 +84,9 @@
                         <instructions>
                             <_noee>true</_noee>
                             <Bundle-Version>${project.version}</Bundle-Version>  <!-- 2.2.99.bnull -->
+                            <Bundle-Description>
+                                Jakarta XML Binding API ${spec.version} Design Specification
+                            </Bundle-Description>
                             <Extension-Name>${extension.name}</Extension-Name>
                             <Implementation-Version>${spec.version}.${impl.version}</Implementation-Version>
                             <Specification-Version>${spec.version}</Specification-Version>
